--- a/Web-Gym-App/package.json
+++ b/Web-Gym-App/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@reduxjs/toolkit": "^2.2.8",
     "react": "^18.3.1",
+    "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
     "react-intersection-observer": "^9.13.1",
     "react-redux": "^9.1.2",
